--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@ body {
 }
 
 a {
-  color: #0563bb;
+  color: #b08401;
   text-decoration: none;
 }
 
 a:hover {
-  color: #067ded;
+  color: #d49e8d;
   text-decoration: none;
 }
 
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0563bb;
+  background: #b08401;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #0678e3;
+  background: #d49e8d;
   color: #fff;
 }
 .back-to-top.active {
@@ -127,7 +127,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #header {
     width: 300px;
-    background: #fff;
+    background: #faf6f2;
     border-right: 1px solid #e6e9ec;
     left: -300px;
   }
@@ -190,7 +190,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
   color: #fff;
-  background: #0563bb;
+  background: #b08401;
 }
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
   color: #fff;
@@ -265,16 +265,16 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color: #683b2b;
 }
 #hero p {
-  color: #45505b;
+  color: #683b2b;
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 #hero p span {
-  color: #0563bb;
+  color: #b08401;
   letter-spacing: 1px;
 }
 #hero .social-links {
@@ -283,13 +283,13 @@ h1, h2, h3, h4, h5, h6 {
 #hero .social-links a {
   font-size: 24px;
   display: inline-block;
-  color: #45505b;
+  color: #683b2b;
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
 }
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #b08401;
 }
 @media (max-width: 992px) {
   #hero {
@@ -325,7 +325,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #45505b;
+  color: #683b2b;
 }
 .section-title h2::before {
   content: "";
@@ -333,7 +333,7 @@ section {
   display: block;
   width: 120px;
   height: 1px;
-  background: #ddd;
+  background: #ded1bd;
   bottom: 1px;
   left: calc(50% - 60px);
 }
@@ -343,7 +343,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background: #b08401;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -374,7 +374,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #0563bb;
+  color: #b08401;
   line-height: 0;
 }
 .about .content p:last-child {
@@ -398,7 +398,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
+  background: #b08401;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -460,12 +460,12 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #45505b;
+  color: #683b2b;
 }
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #0563bb;
+  border-left: 2px solid #b08401;
   position: relative;
 }
 .resume .resume-item h4 {
@@ -474,12 +474,12 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #b08401;
   margin-bottom: 10px;
 }
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #f7f8f9;
+  background: #b08401;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -502,8 +502,8 @@ section {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #fff;
-  border: 2px solid #0563bb;
+  background: #b08401;
+  border: 2px solid #b08401;
 }
 
 /*--------------------------------------------------------------
@@ -534,7 +534,7 @@ section {
   transition: all 0.3s ease-in-out;
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb;
+  color: #683b2b;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -623,7 +623,7 @@ section {
   transition: 0.3s;
 }
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #148af9;
+  color: #683b2b;
 }
 .portfolio .portfolio-wrap:hover::before {
   top: 0;
@@ -662,10 +662,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #683b2b;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #683b2b;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -1000,8 +1000,8 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #f7f8f9;
-  color: #45505b;
+  background: #ded1bd;
+  color: #683b2b;
   font-size: 14px;
   text-align: center;
   padding: 30px 0;
