--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #0563bb;
+  border: 6px solid #b08401;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a, .nav-menu a:focus {
   display: flex;
   align-items: center;
-  color: #45505b;
+  color: #b08401;
   padding: 10px 18px;
   margin-bottom: 8px;
   transition: 0.3s;
@@ -177,7 +177,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .nav-menu a span, .nav-menu a:focus span {
   padding: 0 5px 0 7px;
-  color: #45505b;
+  color: #b08401;
 }
 @media (min-width: 992px) {
   .nav-menu a, .nav-menu a:focus {
@@ -233,7 +233,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb;
+  background-color: #b08401;
 }
 
 /*--------------------------------------------------------------
